TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_before.dot
digraph AST {
  "135522471490704" [label="Start"];
  "135522471490704" -> "135522471488448";
  "135522471488448" [label="Code"];
  "135522471488448" -> "135522471490800";
  "135522471490800" [label="Function"];
  "135522471490800" -> "135522471488640";
  "135522471490800" -> "135522471493536";
  "135522471490800" -> "135522471492960";
  "135522471488640" [label="main"];
  "135522471493536" [label="Parameters"];
  "135522471492960" [label="Code"];
  "135522471492960" -> "135522471490608";
  "135522471492960" -> "135522471559904";
  "135522471492960" -> "135522471561920";
  "135522471490608" [label="Scope"];
  "135522471490608" -> "135522471488256";
  "135522471488256" [label="Declaration"];
  "135522471488256" -> "135522471490032";
  "135522471488256" -> "135522471559616";
  "135522471490032" [label="x"];
  "135522471559616" [label="1"];
  "135522471559904" [label="Scope"];
  "135522471559904" -> "135522471560480";
  "135522471560480" [label="Declaration"];
  "135522471560480" -> "135522471560960";
  "135522471560480" -> "135522471561632";
  "135522471560960" [label="x"];
  "135522471561632" [label="2"];
  "135522471561920" [label="Return"];
  "135522471561920" -> "135522471562640";
  "135522471562640" [label="0"];
}
